[package]
name = "belajar-be"
version = "0.1.0"
edition = "2024"

[dependencies]
time = "0.1.12"
regex = "0.1.41"
clickhouse = "0.12.2"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.98"
chrono = "0.4.41"
actix-web = "4.11.0"
# actix-web = "4.10.2"
dotenv ="0.15.0"
reqwest = { version = "0.12.15", features = ["cookies", "json", "stream"]}
serde_json = "1.0.140"
serde_merge = "0.1.3"
# anyhow = "1.0"
actix-cors = "0.6.4"
# chrono = "0.4"